infrastructure/03-apps/navidrome/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: navidrome
spec:
  selector:
    app: navidrome
  ports:
    - port: 80
      targetPort: 4533
  type: ClusterIP
