infrastructure/03-apps/navidrome/manifests/deemix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deemix
  namespace: navidrome
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.cilium.io/loadbalancer-mode: "shared"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - deemix.foobarbaz.fr
      secretName: deemix-tls
  rules:
    - host: deemix.foobarbaz.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deemix-oauth2-proxy
                port:
                  number: 80
