infrastructure/03-apps/navidrome/manifests/ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome-web
  namespace: navidrome
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: navidrome-navidrome-auth@kubernetescrd,navidrome-navidrome-auth-errors@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - music.foobarbaz.fr
      secretName: navidrome-tls
  rules:
    - host: music.foobarbaz.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: navidrome, port: { number: 80 } }
