infrastructure/03-apps/navidrome/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  namespace: navidrome
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.cilium.io/loadbalancer-mode: "shared"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - music.tomlab.fr
        - music.foobarbaz.fr
      secretName: navidrome-tls
  rules:
    - host: music.tomlab.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: navidrome, port: { number: 80 } }
    - host: music.foobarbaz.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: navidrome, port: { number: 80 } }
