infrastructure/03-apps/navidrome/manifests/subwave-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subwave
  namespace: navidrome
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.cilium.io/loadbalancer-mode: "shared"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - radio.foobarbaz.fr
      secretName: subwave-tls
  rules:
    - host: radio.foobarbaz.fr
      http:
        paths:
          - path: /stream.mp3
            pathType: Prefix
            backend:
              service:
                name: subwave-backend
                port:
                  number: 7702
          - path: /stream.opus
            pathType: Prefix
            backend:
              service:
                name: subwave-backend
                port:
                  number: 7702
          - path: /
            pathType: Prefix
            backend:
              service:
                name: subwave-web
                port:
                  number: 7700
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subwave-api
  namespace: navidrome
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.cilium.io/loadbalancer-mode: "shared"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - radio.foobarbaz.fr
      secretName: subwave-tls
  rules:
    - host: radio.foobarbaz.fr
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: subwave-backend
                port:
                  number: 7701
