infrastructure/03-apps/navidrome/manifests/policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: navidrome-isolation
  namespace: navidrome
spec:
  endpointSelector:
    matchLabels:
      app: navidrome
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "4533"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app: subwave-backend
      toPorts:
        - ports:
            - port: "4533"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": nightingale
            "k8s:app": nightingale
      toPorts:
        - ports:
            - port: "4533"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": alloy
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: deemix-isolation
  namespace: navidrome
spec:
  endpointSelector:
    matchLabels:
      app: deemix
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: deemix-oauth2-proxy
      toPorts:
        - ports:
            - port: "6595"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": alloy
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: deemix-oauth2-proxy-isolation
  namespace: navidrome
spec:
  endpointSelector:
    matchLabels:
      app: deemix-oauth2-proxy
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "4180"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app: deemix
      toPorts:
        - ports:
            - port: "6595"
              protocol: TCP
            - port: "80"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
